welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:1: error: illegal start of simple pattern
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {for (i<-0 to nums.length {if (tab(i) == lookingFor) {return i}} ;return -1} 
                                                                                                                           ^indexOfValue:1: error: '<-' expected but '}' found.
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {for (i<-0 to nums.length {if (tab(i) == lookingFor) {return i}} ;return -1} 
                                                                                                                                    ^